[package]
name        = "hashdistinct"
description = "Utility for deletion duplications using SHA256/SHA384/SHA512/SHA512_256 sum"
repository  = "https://github.com/starfear/hashdistinct"
version     = "0.3.1"
authors     = ["starfear <starfear@outlook.com>"]
keywords    = ["cli", "hash", "search", "utility"]
edition     = "2018"
license     = "GPL-3.0"
readme      = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap    = "2.33"
ring    = "0.16.9"
colored = "1.9.1"